despatma/tests/fail/abstract_factory/missing_types.stderr
error[E0433]: failed to resolve: use of undeclared type `GnomeButton`
  --> $DIR/missing_types.rs:21:32
   |
21 | #[interpolate_traits(Button => GnomeButton)]
   |                                ^^^^^^^^^^^ use of undeclared type `GnomeButton`
